replaced getLast with a backwards compatible getter